--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -4,7 +4,7 @@
 
   position: relative;
 
-  &--border-bottom {
+  &--line {
     border-bottom: 1px solid $background-color-7;
 
     @media (min-width: $tablet-width) {
